# iabd-sbd-3.4-cuadro_de_mando

./: main.py  pyproject.toml  todo.md
config/: settings.py  urls.py
data_silver_layer/: Estadísticas_diarias.csv  Tiempo_por_horas.csv
data_silver_layer/data_current/: Tiempo_actual.csv  almeria.csv  cadiz.csv  cordoba.csv  granada.csv  huelva.csv  jaen.csv  malaga.csv  sevilla.csv
data_silver_layer/data_hourly/: almeria.csv  cadiz.csv  cordoba.csv  granada.csv  huelva.csv  jaen.csv  malaga.csv  sevilla.csv
data_silver_layer/data_stats/: almeria.csv  cadiz.csv  cordoba.csv  granada.csv  huelva.csv  jaen.csv  malaga.csv  sevilla.csv
static/css/: style.css
weather/: models.py  urls.py  views.py
weather/ml_models/: modelo_clima.pkl
weather/services/: db_connector.py  db_reader.py  extractor.py  graficos.py  ml_engine.py  predictions.py  processor.py  visualizer.py
weather/templates/tiempo/: base.html  datos.html  graficos.html  index.html  informes.html
